--- a/scss/dark-theme.scss
+++ b/scss/dark-theme.scss
@@ -1073,7 +1073,7 @@ $dark-block-2: #2B2C2E;
     .action-btn-highlight:after{
         border-color: #5D972E;
     }
-    .ant-picker-custom-range .ant-picker-dropdown .ant-picker-panel-container .ant-picker-panels{
+    .ant-picker-custom-range .ant-picker-panel-container .ant-picker-panels{
         &::-webkit-scrollbar-track {
             background: #232E33;
         }
