--- a/css/about-props.css
+++ b/css/about-props.css
@@ -92,7 +92,7 @@
         bottom: 0; }
 
 .utility-sec {
-  padding-bottom: 80px;
+  padding-bottom: 70px;
   padding-top: 80px;
   position: relative; }
   .utility-sec.floating-icon-left:before {
@@ -113,8 +113,9 @@
     padding-top: 60px;
     display: flex; }
     .utility-sec .utility-col-sec .list-block {
-      flex: 1 1 auto;
-      padding-right: 140px; }
+      flex: 1 1 auto; }
+      .utility-sec .utility-col-sec .list-block:first-child {
+        padding-right: 35px; }
     .utility-sec .utility-col-sec .auth-det-block {
       flex: 0 0 auto; }
     .utility-sec .utility-col-sec .det-list {
@@ -126,7 +127,9 @@
         color: #4D6090;
         font-size: 20px;
         font-weight: 300;
-        margin-bottom: 34px; }
+        margin-bottom: 60px; }
+        .utility-sec .utility-col-sec .det-list li:last-child {
+          margin-bottom: 15px; }
         .utility-sec .utility-col-sec .det-list li::before {
           content: '';
           flex-shrink: 0;
@@ -137,64 +140,104 @@
           background-image: url("../img/li-icon.svg");
           background-repeat: no-repeat;
           background-position: center; }
-    .utility-sec .utility-col-sec .auth-det-card {
-      padding: 55px 20px 65px;
-      text-align: center;
-      width: 440px;
-      min-height: 250px;
-      border-radius: 27px;
-      border: 1px solid #B6C3E5;
-      background: linear-gradient(150deg, rgba(78, 93, 181, 0.09) 1.44%, rgba(121, 140, 255, 0) 47.82%);
-      display: flex;
-      flex-direction: column;
-      align-items: center; }
-      .utility-sec .utility-col-sec .auth-det-card .auth-img img {
-        border-radius: 50%;
-        width: 154px;
-        height: 154px;
-        flex-shrink: 0; }
-      .utility-sec .utility-col-sec .auth-det-card .name-block {
-        padding-top: 30px;
-        position: relative;
-        margin-bottom: 23px;
-        width: 100%;
-        z-index: 1; }
-        .utility-sec .utility-col-sec .auth-det-card .name-block .name-outline {
-          top: -10px;
-          font-size: 57px;
-          font-weight: 600;
-          -webkit-text-stroke: 1px #151F4B57;
-          -webkit-text-fill-color: #fff;
-          position: absolute;
-          text-wrap: nowrap;
-          left: 0;
-          right: 0;
-          margin: auto;
-          z-index: -1; }
-        .utility-sec .utility-col-sec .auth-det-card .name-block h4 {
-          font-size: 25px;
-          font-weight: 600;
-          color: #2E4276;
-          margin-bottom: 0; }
-        .utility-sec .utility-col-sec .auth-det-card .name-block p {
-          margin-bottom: 0;
-          font-size: 17px;
-          font-weight: 300;
-          color: #2966FF; }
-      .utility-sec .utility-col-sec .auth-det-card .auth-abt {
-        font-size: 15px;
+
+.team-sec {
+  padding-bottom: 100px;
+  display: flex; }
+  .team-sec .team-col {
+    padding: 8px;
+    width: calc(100%/ 3); }
+  .team-sec .auth-det-block {
+    height: 100%; }
+  .team-sec .auth-det-card {
+    padding: 35px 20px;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    min-height: 250px;
+    border-radius: 27px;
+    border: 1px solid #B6C3E5;
+    background: linear-gradient(150deg, rgba(78, 93, 181, 0.09) 1.44%, rgba(121, 140, 255, 0) 47.82%);
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .team-sec .auth-det-card .auth-img img {
+      border-radius: 50%;
+      width: 136px;
+      height: 136px;
+      flex-shrink: 0; }
+    .team-sec .auth-det-card .name-block {
+      margin-top: 40px;
+      position: relative;
+      margin-bottom: 23px;
+      width: 100%;
+      z-index: 1; }
+      .team-sec .auth-det-card .name-block .name-outline {
+        top: -35px;
+        font-size: 42px;
+        font-weight: 600;
+        -webkit-text-stroke: 1px #151F4B57;
+        -webkit-text-fill-color: #fff;
+        position: absolute;
+        text-wrap: nowrap;
+        left: 0;
+        right: 0;
+        margin: auto;
+        z-index: -1; }
+      .team-sec .auth-det-card .name-block h4 {
+        font-size: 25px;
+        font-weight: 600;
+        color: #2E4276;
+        margin-bottom: 0; }
+      .team-sec .auth-det-card .name-block p {
+        margin-bottom: 0;
+        font-size: 17px;
         font-weight: 300;
-        color: #4D6090;
-        margin-bottom: 30px; }
-      .utility-sec .utility-col-sec .auth-det-card .soc-block .auth-soc {
-        display: inline-block;
-        border: solid 1px #B6C3E5;
-        border-radius: 50%;
-        margin: 0 5px; }
+        color: #2966FF; }
+    .team-sec .auth-det-card .auth-abt {
+      font-size: 15px;
+      font-weight: 300;
+      color: #4D6090;
+      margin-bottom: 30px; }
+    .team-sec .auth-det-card .soc-block .auth-soc {
+      display: inline-block;
+      border: solid 1px #B6C3E5;
+      border-radius: 50%;
+      margin: 0 5px; }
 
 @media (max-width: 1679px) {
   .abt-banner-sec .home-banner-cover .pros-label-block {
     margin-bottom: 25px; }
+
+  .team-sec .auth-det-card {
+    padding: 30px 18px; }
+
+  .team-sec .auth-det-card .auth-img img {
+    width: 125px;
+    height: 125px; }
+
+  .team-sec .auth-det-card .name-block h4 {
+    font-size: 22px; }
+
+  .team-sec .auth-det-card .name-block .name-outline {
+    top: -25px;
+    font-size: 35px; }
+
+  .team-sec .auth-det-card .name-block {
+    margin-top: 35px; }
+
+  .team-sec .auth-det-card .auth-abt {
+    font-size: 14px;
+    margin-bottom: 20px; }
+
+  .team-sec .auth-det-card .soc-block .auth-soc img {
+    width: 55px; }
+
+  .team-sec {
+    padding-bottom: 60px; }
+
+  .team-sec .auth-det-card .name-block p {
+    font-size: 15px; }
 
   .abt-banner-sec .home-banner-cover .title-txt {
     font-size: 18px; }
@@ -243,13 +286,12 @@
   .utility-sec .utility-col-sec .det-list li {
     font-size: 17px; }
 
-  .utility-sec .utility-col-sec .list-block {
-    flex: 1 1 auto;
-    padding-right: 100px; }
-
   .utility-sec .utility-col-sec .auth-det-card .auth-img img {
     width: 135px;
     height: 135px; }
+
+  .utility-sec .utility-col-sec .det-list li {
+    margin-bottom: 45px; }
 
   .utility-sec .utility-col-sec .auth-det-card .name-block .name-outline {
     font-size: 44px;
@@ -278,8 +320,14 @@
   .abt-banner-sec::after {
     background-size: 310px; } }
 @media (max-width: 1481px) {
+  .team-sec {
+    padding-bottom: 50px; }
+
   .abt-banner-sec .home-banner-cover .title-txt {
     font-size: 16px; }
+
+  .team-sec .auth-det-card {
+    padding: 30px 12px; }
 
   .news-sec .news-sec-cover .content-block h2 {
     font-size: 25px;
@@ -355,15 +403,26 @@
   .utility-sec .utility-col-sec .auth-det-card {
     width: 330px;
     padding: 30px 20px 40px; } }
-@media (max-width: 1300px) {
-  .utility-sec .utility-col-sec .list-block {
-    padding-right: 70px; } }
+@media (max-width: 1370px) {
+  .team-sec .auth-det-card .name-block .name-outline {
+    top: -21px;
+    font-size: 30px; }
+
+  .team-sec .auth-det-card .name-block h4 {
+    font-size: 21px; }
+
+  .team-sec .auth-det-card .soc-block .auth-soc img {
+    width: 50px; }
+
+  .team-sec .auth-det-card .auth-abt br {
+    display: none; } }
 @media (max-width: 1281px) {
   .utility-sec .title-block h2 {
     font-size: 26px; } }
 @media (max-width: 1199px) {
-  .utility-sec .utility-col-sec .list-block {
-    padding-right: 50px; }
+  .team-sec .auth-det-card .auth-img img {
+    width: 120px;
+    height: 120px; }
 
   .utility-sec .utility-col-sec .auth-det-card .name-block .name-outline {
     font-size: 35px;
@@ -401,15 +460,22 @@
   .news-sec .news-sec-cover {
     padding: 55px 55px 35px 45px; } }
 @media (max-width: 1100px) {
+  .team-sec {
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center; }
+    .team-sec .team-col {
+      width: 350px; }
+
   .utility-sec .utility-col-sec .det-list li, .utility-sec .title-block p {
     font-size: 14px; }
 
   .utility-sec .utility-col-sec .auth-det-card {
-    width: 295px; } }
-@media (max-width: 991px) {
-  .utility-sec .utility-col-sec .list-block {
-    padding-right: 30px; }
+    width: 295px; }
 
+  .team-sec .auth-det-card .name-block {
+    margin-top: 25px; } }
+@media (max-width: 991px) {
   .abt-banner-sec::before {
     background-size: 270px;
     left: -140px;
@@ -438,6 +504,34 @@
   .abt-banner-sec::before, .abt-banner-sec::after {
     width: 40%; } }
 @media (max-width: 767px) {
+  .utility-sec .utility-col-sec .list-block:first-child {
+    padding-right: 0; }
+
+  .utility-sec .utility-col-sec .det-list li {
+    margin-bottom: 25px !important; }
+
+  .utility-sec {
+    padding-bottom: 20px; }
+
+  .team-sec .auth-det-card .name-block {
+    margin-top: 25px; }
+
+  .team-sec .auth-det-card .auth-img img {
+    width: 110px;
+    height: 110px; }
+
+  .team-sec .auth-det-card {
+    padding: 25px 15px; }
+
+  .team-sec {
+    padding-bottom: 20px; }
+
+  .team-sec .auth-det-card .name-block {
+    margin-bottom: 10px; }
+
+  .team-sec .auth-det-card .soc-block .auth-soc img {
+    width: 45px; }
+
   .utility-sec .utility-col-sec {
     flex-wrap: wrap; }
 
@@ -505,6 +599,14 @@
     height: 250px;
     top: 30px; } }
 @media (max-width: 579px) {
+  .team-sec .auth-det-card .auth-img img {
+    width: 100px;
+    height: 100px; }
+
+  .team-sec .team-col {
+    width: 300px;
+    max-width: 100%; }
+
   .abt-banner-sec.home-banner-sec .home-banner-cover::before {
     height: 350px;
     top: -35px; }
@@ -513,7 +615,7 @@
     font-size: 24px; }
 
   .utility-sec {
-    padding-bottom: 25px;
+    padding-bottom: 15px;
     padding-top: 20px; }
 
   .utility-sec .utility-col-sec .det-list li::before {
