--- a/css/home-dark.css
+++ b/css/home-dark.css
@@ -204,18 +204,18 @@
 .theme-dark .utility-sec .title-block h2,
 .theme-dark .utility-sec .title-block p,
 .theme-dark .utility-sec .utility-col-sec .det-list li,
-.theme-dark .utility-sec .utility-col-sec .auth-det-card .name-block h4,
-.theme-dark .utility-sec .utility-col-sec .auth-det-card .auth-abt {
+.theme-dark .auth-det-card .name-block h4,
+.theme-dark .auth-det-card .auth-abt {
   color: #fff; }
 .theme-dark .news-sec .news-sec-cover .img-block .logo-sm img {
   filter: grayscale(1) brightness(4); }
-.theme-dark .utility-sec .utility-col-sec .auth-det-card {
+.theme-dark .auth-det-card {
   border: 1px solid #223A60;
   background: linear-gradient(162deg, #0C0D30 7.72%, rgba(33, 56, 114, 0) 83.68%); }
-.theme-dark .utility-sec .utility-col-sec .auth-det-card .name-block .name-outline {
+.theme-dark .auth-det-card .name-block .name-outline {
   -webkit-text-stroke: 1px #151F4B;
   -webkit-text-fill-color: transparent; }
-.theme-dark .utility-sec .utility-col-sec .auth-det-card .soc-block .auth-soc {
+.theme-dark .auth-det-card .soc-block .auth-soc {
   border-color: #191B4F; }
 
 .theme-dark .top-title {
