--- a/scss/common.scss
+++ b/scss/common.scss
@@ -982,9 +982,8 @@ button{
     }
 }
 
-.ant-picker-custom-range .ant-picker-dropdown .ant-picker-panel-container .ant-picker-panels{
-    overflow: hidden;
-    overflow-x: auto;
+.ant-picker-custom-range .ant-picker-panel-container .ant-picker-panels{
+    
     &::-webkit-scrollbar {
         width: 5px;
         height: 8px;
@@ -1002,7 +1001,9 @@ button{
         background: #dfc6f1;
       }
     @media($sm-767){
-        max-width: 400px;
+        max-width: 80vw;
+        overflow: hidden;
+        overflow-x: auto;
     }
     @media($sm-479){
         max-width: 300px;
