--- a/scss/about-props.scss
+++ b/scss/about-props.scss
@@ -111,7 +111,30 @@
     position: relative;
     &.floating-icon-left:before{
         bottom: auto;
-        top: 250px;
+        top: 100px;
+        right: -12.55vw;
+        left: auto;
+        @media (max-width: 2000px) {
+            right: -14.55vw;
+        }
+        @media (max-width: 1679px) {
+            right: -12.55vw;
+            top: 70px;
+        }
+        @media (max-width: 1481px) {
+            top: 60px;
+        }
+        @media (max-width: 1199px) {
+            right: -10vw;
+            top: 60px;
+        }
+        @media (max-width: 991px) {
+            top: 65px;
+            right: -12vw;
+        }
+        @media (max-width: 767px) {
+            right: -16vw;
+        }
     }
     .title-block{
         h2{
@@ -173,6 +196,10 @@
 .team-sec{
     padding-bottom: 100px;
     display: flex;
+    &.floating-icon-left:before {
+        bottom: auto;
+        top: 75px;
+    }
     .team-col{
         padding: 8px;
         width: calc(100%/ 3);
