--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -1298,6 +1298,7 @@
                 margin-bottom: 5px;
             }
             h4{
+                text-align: right;
                 color: $primary-dark;
                 font-size: 15px;
                 font-weight: 600;
