--- a/scss/home-dark.scss
+++ b/scss/home-dark.scss
@@ -592,4 +592,8 @@
     .table-sec1 .table tr td{
         color: #fff !important;
     }
+    .home-banner-sec .home-banner-cover .banner-card-wapper .banner-num-card{
+        background: rgba(1, 1, 6, 0.63);
+        top: 0;
+    }
 }
