--- a/css/common.css
+++ b/css/common.css
@@ -811,4 +811,15 @@ button {
   .ant-picker-custom-range .ant-picker-panel-container .ant-picker-panels {
     max-width: 300px; } }
 
+@media (max-width: 430px) {
+  .ant-picker .ant-picker-input > input, .ant-picker .ant-picker-separator {
+    font-size: 14px; }
+
+  .custom-modal .inp-block-modal .custom-inp.ant-picker {
+    padding: 6px 10px;
+    height: 40px; } }
+@media (max-width: 380px) {
+  .ant-picker .ant-picker-input > input, .ant-picker .ant-picker-separator {
+    font-size: 12px; } }
+
 /*# sourceMappingURL=common.css.map */
