--- a/css/common.css
+++ b/css/common.css
@@ -811,6 +811,14 @@ button {
   .ant-picker-custom-range .ant-picker-panel-container .ant-picker-panels {
     max-width: 300px; } }
 
+@media (max-width: 479px) {
+  .custom-modal.crate-stake-modal .inp-block-modal .custom-inp.ant-picker-range {
+    display: flex;
+    flex-wrap: wrap; }
+
+  .custom-modal.crate-stake-modal .inp-block-modal .custom-inp.ant-picker-range.ant-picker .ant-picker-suffix {
+    position: absolute;
+    right: 8px; } }
 @media (max-width: 430px) {
   .ant-picker .ant-picker-input > input, .ant-picker .ant-picker-separator {
     font-size: 14px; }
