--- a/scss/common.scss
+++ b/scss/common.scss
@@ -1019,20 +1019,10 @@ button{
         position: absolute;
         right: 8px;
     }
-    
 }
 
 @media(max-width: 430px){
-    .ant-picker .ant-picker-input >input, .ant-picker .ant-picker-separator{
+    .filter-form-content .ant-picker .ant-picker-input >input, .ant-picker .ant-picker-separator{
         font-size: 14px;
-    }
-    .custom-modal .inp-block-modal .custom-inp.ant-picker {
-        padding: 6px 10px;
-        height: 40px;
-    }
-}
-@media(max-width: 380px){
-    .ant-picker .ant-picker-input >input, .ant-picker .ant-picker-separator{
-        font-size: 12px;
     }
 }
