--- a/css/common.css
+++ b/css/common.css
@@ -811,23 +811,17 @@ button {
   .ant-picker-custom-range .ant-picker-panel-container .ant-picker-panels {
     max-width: 300px; } }
 
-@media (max-width: 479px) {
-  .custom-modal.crate-stake-modal .inp-block-modal .custom-inp.ant-picker-range {
-    display: flex;
-    flex-wrap: wrap; }
-
-  .custom-modal.crate-stake-modal .inp-block-modal .custom-inp.ant-picker-range.ant-picker .ant-picker-suffix {
-    position: absolute;
-    right: 8px; } }
 @media (max-width: 430px) {
-  .ant-picker .ant-picker-input > input, .ant-picker .ant-picker-separator {
+  .filter-form-content .ant-picker .ant-picker-input > input, .ant-picker .ant-picker-separator {
+    font-size: 14px; } }
+@media (max-width: 400px) {
+  .custom-modal.crate-stake-modal .inp-block-modal .custom-inp.ant-picker-range.ant-picker .ant-picker-suffix {
+    display: none; }
+
+  .custom-modal.crate-stake-modal .inp-block-modal .ant-picker-large .ant-picker-input > input {
     font-size: 14px; }
 
-  .custom-modal .inp-block-modal .custom-inp.ant-picker {
-    padding: 6px 10px;
+  .custom-modal.crate-stake-modal .inp-block-modal .custom-inp.ant-picker {
     height: 40px; } }
-@media (max-width: 380px) {
-  .ant-picker .ant-picker-input > input, .ant-picker .ant-picker-separator {
-    font-size: 12px; } }
 
 /*# sourceMappingURL=common.css.map */
