--- a/css/common.css
+++ b/css/common.css
@@ -822,6 +822,12 @@ button {
     font-size: 14px; }
 
   .custom-modal.crate-stake-modal .inp-block-modal .custom-inp.ant-picker {
-    height: 40px; } }
+    height: 40px; }
+
+  .custom-modal.crate-stake-modal .ant-picker-range .ant-picker-range-separator {
+    padding: 0 3px; } }
+@media (max-width: 349px) {
+  .custom-modal.crate-stake-modal .inp-block-modal .ant-picker-large .ant-picker-input > input {
+    font-size: 13px; } }
 
 /*# sourceMappingURL=common.css.map */
